<resources>
    <string name="app_name">SfSampleApp</string>
    <string name="title_punch_in">Start</string>
    <string name="title_press_to_punch_in">Press to start journey</string>
    <string name="title_punch_out">Stop</string>
    <string name="title_press_to_punch_out">Press to stop journey</string>
    <string name="title_are_you_sure">Are you sure want to</string>

    <string name="launch_activity">Launch activity</string>
    <string name="splash_screen">Splash screen</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile No.</string>
    <string name="register">Register</string>

    <string name="permissions_has_not_grant">Permissions has not been granted</string>
    <string name="permission_request">Permission Request</string>
    <string name="something_went_wrong">Somthing went wrong, please try again!</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="title_app_config">App config dialog</string>

</resources>
