<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svMain_device_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/disable_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <com.infinityinfoway.sfsampleapp.util.RippleViewCreator
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnlogin_style"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.infinityinfoway.sfsampleapp.util.RippleViewCreator>


        </LinearLayout>
    </RelativeLayout>


</ScrollView>