<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frm_add_attendance"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:id="@+id/relAddAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextClock
            android:id="@+id/txt_add_attendance_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:format12Hour="dd MMM, yyyy hh:mm:ss a"
            android:timeZone="GMT+0530"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_add_attendance_time"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_punch_in"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/bg_circle_expense"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_punchin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/title_punch_in"
                        android:textColor="@color/transparent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_punch_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/title_press_to_punch_in"
                        android:textColor="@color/transparent"
                        android:textSize="14sp" />
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_punch_out"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/bg_circle_order"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_punchout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/title_punch_out"
                        android:textColor="@color/transparent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_punch_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/title_press_to_punch_out"
                        android:textColor="@color/transparent"
                        android:textSize="14sp" />
                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>


    </RelativeLayout>


</FrameLayout>